amélioration personnel et parking

--- a/BTS.html
+++ b/BTS.html
@@ -19,12 +19,12 @@
         <li class="menu-deroulant">
           <a href="projet.html">Projet</a>
           <ul class="sous-menu">
-            <li><a href="/projets/MeriseBDD.html">Sucrerie</a></li>
-            <li><a href="/projets/PHPMVC.html">Festival</a></li>
-            <li><a href="/projets/Personnel.html">Personnel</a></li>
-            <li><a href="/projets/Parking.html">Parking</a></li>
-            <li><a href="/projets/Stage1.html">Stage 1ère année</a></li>
-            <li><a href="/projets/Stage2.html">Stage 2ème année</a></li>
+            <li><a href="MeriseBDD.html">Sucrerie</a></li>
+            <li><a href="PHPMVC.html">Festival</a></li>
+            <li><a href="Personnel.html">Personnel</a></li>
+            <li><a href="Parking.html">Parking</a></li>
+            <li><a href="Stage1.html">Stage 1ère année</a></li>
+            <li><a href="Stage2.html">Stage 2ème année</a></li>
           </ul>
         </li>
         <li><a href="Veille.html">Veille</a></li>
