changement style (boutons)

--- a/MeriseBDD.html
+++ b/MeriseBDD.html
@@ -55,8 +55,8 @@
         <br> <img  id="MLD"src="image/sucrerie MLD.png">
         <br> <i id="I2"> Modèle Logique des Données fait à partir du MCD et qui va nous permettre de faire la base de données sur MySQL</i> 
         <br> <br>
-        <button id = "bouton_Projet">   <a href="https://github.com/etihaine/sucrerie" class="nounderline color-black" target="_blank">
-          Lien github des scripts de la Base de Données
+        <button class="button-48" role="button">   <a href="https://github.com/etihaine/sucrerie" class="nounderline color-black" target="_blank">
+          <span class="text"><strong>Lien github des scripts de la Base de Données</strong>
         </a> </button>
         
     </p></div>
