--- a/PHPMVC.html
+++ b/PHPMVC.html
@@ -109,8 +109,9 @@
               </table>
 
 
-           <br><button id = "bouton_Projet" style="margin-left: 810px;" >   <a href="https://github.com/glopez-dev/Festival2" class="nounderline color-black center-text" target="_blank" >
-                Lien github du projet MVC
+           <br><button class="button-48" role="button" style="margin-left: 810px;" >   <a href="https://github.com/glopez-dev/Festival2" class="nounderline color-black center-text" target="_blank" >
+          <span class="text"><strong>Lien github du projet MVC</strong>
+
               </a> </button>
         </p>
         </div>
