--- a/Stage1.html
+++ b/Stage1.html
@@ -51,8 +51,8 @@
             <br> connaître l'heure à laquelle chacune est arrivée et donc par conséquent leurs fréquence.
             (utilisation de java et de son framework Spring, Oracle et regex)
            <br>
-           <br><button id = "bouton_Projet">   <a href="image/carnet de bord.pdf" class="nounderline color-black" target="_blank">
-                Lien de mon carnet de bord
+           <br><button class="button-48" role="button">   <a href="image/carnet de bord.pdf" class="nounderline color-black" target="_blank">
+            <span class="text"> <strong>Lien de mon carnet de bord</strong></span>
               </a> </button>
         </p>
         </div>
