--- a/projet.html
+++ b/projet.html
@@ -58,9 +58,9 @@
         </p>
       </td>
       <td>
-        <button id = "DL">
+        <button  class="button-57" role="button" style="margin-left: -500;">
           <a class="wp-block-button__link nounderline color-black " href="MeriseBDD.html">
-        <strong> Merise et Base de Données</strong></a>
+            <span class="text"> <strong> Création d'une base de données Merise </strong></span><span><strong> Sucrerie </strong></span>
       </td>
     </tr>
     <tr>
@@ -70,9 +70,9 @@
         </p>
       </td>
       <td>
-        <button id = "DL">
+        <button  class="button-57" role="button" style="margin-left: -500;">
           <a class="wp-block-button__link nounderline color-black " href="PHPMVC.html">
-        <strong> Festival</strong></a>
+            <span class="text"> <strong> Réalisation d'une application web en MVC </strong></span><span><strong> Festival </strong></span>
       </td>
     </tr>
     <tr>
@@ -82,9 +82,9 @@
         </p>
       </td>
       <td>
-        <button id = "DL">
+        <button  class="button-57" role="button" style="margin-left: -500;">
           <a class="wp-block-button__link nounderline color-black " href="Personnel.html">
-        <strong>Personnel</strong></a>
+            <span class="text"> <strong> Réalisation d'une application java de gestion de personnel </strong></span><span><strong> Personnel </strong></span>
       </td>
     </tr>
     <tr>
@@ -94,9 +94,9 @@
         </p>
       </td>
       <td>
-        <button id = "DL">
+        <button  class="button-57" role="button" style="margin-left: -500;">
           <a class="wp-block-button__link nounderline color-black " href="Veille.html">
-        <strong> Veille Machine learning</strong></a>
+            <span class="text"> <strong> Veille informationnelle </strong></span><span><strong> Machine learning </strong></span>
       </td>
     </tr>
     <tr>
@@ -106,9 +106,9 @@
         </p>
       </td>
       <td>
-        <button id = "DL">
+        <button  class="button-57" role="button" style="margin-left: -500;">
           <a class="wp-block-button__link nounderline color-black " href="Parking.html">
-        <strong> Parking</strong></a>
+            <span class="text"> <strong> Réalisation d'une application Laravel en AP</strong></span><span><strong> Parking </strong></span>
       </td>
     </tr>
     <tr>
@@ -118,9 +118,9 @@
         </p>
       </td>
       <td>
-        <button id = "DL">
+        <button  class="button-57" role="button" style="margin-left: -500;">
           <a class="wp-block-button__link nounderline color-black " href="Stage1.html">
-        <strong> Réalisation en milieu professionnel (2021-2022) </strong></a>
+            <span class="text"> <strong> Réalisation en milieu professionnel (2021-2022)</strong></span><span><strong> Stage 1ère année</strong></span>
       </td>
     </tr>
     <tr>
@@ -130,9 +130,10 @@
         </p>
       </td>
       <td>
-        <button id = "DL">
+        <button  class="button-57" role="button" style="margin-left: -500;">
           <a class="wp-block-button__link nounderline color-black " href="Stage2.html">
-        <strong> Réalisation en milieu professionnel (2022-2023)</strong></a>
+            <span class="text"> <strong> Réalisation en milieu professionnel (2022-2023)</strong></span><span><strong> Stage 2ème année</strong></span>
+        </a>
       </td>
     </tr>
   
@@ -145,4 +146,7 @@
 </footer>
 
 </html>
+
+    <!-- HTML 
+<button class="button-57" role="button"><span class="text">Button 57</span><span>Alternate text</span></button> !-->
 
