--- a/Parking.html
+++ b/Parking.html
@@ -62,10 +62,14 @@
           </tr>
                 <tr>
                   <td>
-                    <button id = "bouton_Projet" ><a href="https://github.com/PPE-BTS-SIO-2023-EMALARME-GLOPEZ/Parking_PPE/wiki/Conception-de-la-Base-de-donn%C3%A9es" class="nounderline color-black" target="_blank">MCD</a></button>
+                    <button class="button-48" role="button" ><a href="https://github.com/PPE-BTS-SIO-2023-EMALARME-GLOPEZ/Parking_PPE/wiki/Conception-de-la-Base-de-donn%C3%A9es" class="nounderline color-black" target="_blank">
+                       <span class="text"><strong>MCD</strong>
+                    </a></button>
                   </td>
                   <td>
-                    <button id = "bouton_Projet" style="margin-left: 230px;"><a href="https://githttps://github.com/PPE-BTS-SIO-2023-EMALARME-GLOPEZ/Parking_PPE/wiki/Maquette" class="nounderline color-black" target="_blank">Maquette du site </a></button>
+                    <button class="button-48" role="button" style="margin-left: 230px;"><a href="https://github.com/PPE-BTS-SIO-2023-EMALARME-GLOPEZ/Parking_PPE/wiki/Maquette#maquette-du-site" class="nounderline color-black" target="_blank">
+                       <span class="text"><strong>Lien github de la maquette de parking</strong>
+                    </a></button>
                   </td>
                 </tr>
               </table>
@@ -99,13 +103,14 @@
            <p>
             <table>
               <td>
-           <br><button id = "bouton_Projet">   <a href="https://github.com/PPE-BTS-SIO-2023-EMALARME-GLOPEZ/Parking_PPE" class="nounderline color-black" target="_blank">
-                Lien github du projet Parking
+           <br>
+          <button class="button-48" role="button">   <a href="https://github.com/PPE-BTS-SIO-2023-EMALARME-GLOPEZ/Parking_PPE" class="nounderline color-black" target="_blank">
+               <span class="text"><strong>Lien github du projet Parking</strong>
               </a> </button>
               </td>
               <td>
-                <br> <button id ="bouton_Projet"> <a href="http://emallarmeschwob.mdn.alexandre-mesle.com/parking/" class="nounderline color-black" target="_blank"> 
-                  Lien du projet
+                <br> <button class="button-48" role="button"> <a href="http://emallarmeschwob.mdn.alexandre-mesle.com/parking/" class="nounderline color-black" target="_blank"> 
+                  <span class="text"><strong>Lien du projet</strong>
                 </a></button>
               </td>
               </table>
@@ -117,3 +122,6 @@
         </footer>
         
         </html>
+
+<!-- HTML 
+        <button class="button-48" role="button"><span class="text">Button 48</span></button>
