--- a/Stage2.html
+++ b/Stage2.html
@@ -119,8 +119,9 @@
             </td>
             </tr>
           </table>
-           <br><button id = "bouton_Projet">   <a href="image/doc 2eme stage.pdf" class="nounderline color-black" target="_blank">
-                Lien de mon carnet de bord
+
+           <br><button  class="button-48" role="button">   <a href="image/doc 2eme stage.pdf" class="nounderline color-black" target="_blank">
+                <span class="text"><strong>Lien de mon carnet de bord</strong></span>
               </a> </button>
         </p>
         </div>
