--- a/index.html
+++ b/index.html
@@ -191,34 +191,35 @@
 </tr>
 <tr>
   <td>
-    <p><button id = "DL"><a class="nounderline color-black" href="projet.html" rel="noreferrer noopener" download="">
-    <strong> Accéder à mes projets </strong></a>
-    </button>
+    <p>
+      <button class="button-57" role="button">
+        <a class="wp-block-button__link nounderline color-black" href="projet.html" rel="noreferrer noopener" download="">
+          <span class="text"> <strong>  Accéder à mes projets </strong></span><span><strong>  Mes projets </strong></span></a>
+
     </p>
   </td>
   <td>
     <p>
-    <button id = "DL"><a  class="nounderline color-black" href="Veille.html" rel="noreferrer noopener" download="">
-    <strong> Accéder à ma veille </strong></a>
-    </button>
+      <button class="button-57" role="button">
+        <a class="wp-block-button__link nounderline color-black" href="Veille.html" rel="noreferrer noopener" download="">
+          <span class="text"> <strong>  Accéder à ma veille </strong></span><span><strong>  Ma veille </strong></span></a>
     </p>
   </td>
   <td>
-    <p><button id = "DL"><a class="nounderline color-black" href="image/Tableau des compétences.pdf " target="_blank" rel="noreferrer noopener" download="">
-    <strong> Accéder à mon tableau des compétences </strong></a>
-    </button>
+    <p>
+      <button class="button-57" role="button">
+        <a class="wp-block-button__link nounderline color-black" href="image/Tableau des compétences.pdf " target="_blank" rel="noreferrer noopener" download="">
+          <span class="text"> <strong>  Accéder à mon tableau des compétences </strong></span><span><strong> tableau des compétences </strong></span></a>
+       
     </p>
   </td>
 </tr> 
 </table>  
 <br>
 
-  <h3 id = "profil">
-    Mon CV 
-</h3>
-<p><button id = "DL">
+<p><button class="button-57" role="button">
   <a class="wp-block-button__link nounderline color-black" href="image/ETIENNE MALLARMÉ SCHWOB.pdf" target="_blank" download="Etienne Mallarmé Schwob.pdf">
-  <strong> Télécharger mon CV </strong></a>
+    <span class="text"> <strong>  Télécharger mon CV      </strong></span><span><strong>Mon CV </strong></span></a>
   
 </button></p>
 </body>
@@ -228,5 +229,12 @@
 
 </html>
 
-
+<!-- HTML 
 <ajouter les outils maitrisés , les projets réalisés, les langagues maitrisés, stage, parcour pro et photo.
+
+
+<button class="button-57" role="button"><span class="text">Button 57</span><span>Alternate text</span></button> 
+
+
+!-->
+
