veille + tableau projet

--- a/Veille.html
+++ b/Veille.html
@@ -35,16 +35,37 @@
 <body>
 
   <div class="titre-page">
-    <h1 class="font-alt color-white font-w-900 center-text">Ma Veille</h2>
+    <h1 class="font-alt color-white font-w-900 center-text">Ma Veille Technologique</h2>
     </div>
 
       <div class="container container-main"> 
-        <table class ="tableau">
+        <div class="col-md-12">
+          <p> 
+            <h3><b>
+            Qu'es-ce que la veille technologique :
+            </b></h3>
+          </p>
+            <p>
+            <br> Une veille technologique consiste en une surveillance systématique sur les évolutions techniques, sur un secteur d'activité donnée. 
+            <br> Cela implique la mise en oeuvre de techniques : d'acquisition, de stockage, de partage d'informations et de diffusion au sein de l'entreprise
+            <br> afin de s'informer des changements présents sur le marché et donc d'évaluer l'impact sur l'environnement de l'entreprise. 
+          </p>
+          <br>
+          <p>
+            <h3><b>
+              Mon sujet :
+            </b></h3>
+            </p>
+            <p>
+            <br> J'ai choisi de travailler sur le machine et learning et l'intelligence artificielle 
+          </p>
+        </div>
+        <br> <table class ="tableau">
           <!-- 1ere ligne -->
           <tr>
             <td>
               <p>
-                <a href="https://www.presse-citron.net/ces-deux-ia-debattent-philosophie-depuis-des-jours-ce-que-jen-ai-retenu/" target="_blank"><img src="image/IA philo.png" style="width: 624px;height:351px;"> </a>
+                <a href="https://www.presse-citron.net/ces-deux-ia-debattent-philosophie-depuis-des-jours-ce-que-jen-ai-retenu/" target="_blank"><img src="image/IA philo.png" style=" width : 624px; height:351px; "> </a>
             </p>
             </td>
 
